# trance

./: BUILD.rst  LICENSE  LICENSE.rst  Makefile.am  README.rst  TODO.rst  configure.ac
codec/: Makefile.am  fastlz_compress_main.cpp  fastlz_decompress_main.cpp  lz4_compress_main.cpp  lz4_decompress_main.cpp  quicklz_compress_main.cpp  quicklz_decompress_main.cpp
eigen/: Makefile.am
models/: Makefile.am  ctb.sh  wsj.sh
models/CTB-32/: prop.list
models/CTB-64/: prop.list
models/WSJ/: prop.list
models/WSJ-32/: prop.list
models/WSJ-model/: prop.list
progs/: Makefile.am  rnnp_grammar.cpp  rnnp_graphviz.cpp  rnnp_learn.cpp  rnnp_learn_mpi.cpp  rnnp_oracle.cpp  rnnp_oracle_sequence.cpp  rnnp_parse.cpp  rnnp_treebank.cpp  trance_grammar.cpp  trance_graphviz.cpp  trance_learn.cpp  trance_learn_mpi.cpp  trance_oracle.cpp  trance_parse.cpp  trance_treebank.cpp
rnnp/: Makefile.am  allocator.hpp  binarize.hpp  binarize_left.hpp  binarize_main.cpp  binarize_right.hpp  debinarize.hpp  derivation.hpp  dot_product.hpp  evalb.cpp  evalb.hpp  evalb_main.cpp  feature.cpp  feature.hpp  feature_function.hpp  feature_set.cpp  feature_set.hpp  feature_state.hpp  feature_vector.hpp  feature_vector_codec.hpp  feature_vector_compact.hpp  feature_vector_linear.hpp  forest.cpp  forest.hpp  forest_main.cpp  gradient.cpp  gradient.hpp  grammar.cpp  grammar.hpp  grammar_main.cpp  graphviz.cpp  graphviz.hpp  graphviz_main.cpp  learn_option.cpp  learn_option.hpp  loss.hpp  model.cpp  model.hpp  model_traits.hpp  node.hpp  (+28 more)
rnnp/feature/: grammar.hpp  penalty.hpp
rnnp/gradient/: model1.cpp  model1.hpp  model2.cpp  model2.hpp  model3.cpp  model3.hpp  model4.cpp  model4.hpp  model5.cpp  model5.hpp  model6.cpp  model6.hpp  model7.cpp  model7.hpp  model8.cpp  model8.hpp
rnnp/model/: model1.cpp  model1.hpp  model2.cpp  model2.hpp  model3.cpp  model3.hpp  model4.cpp  model4.hpp  model5.cpp  model5.hpp  model6.cpp  model6.hpp  model7.cpp  model7.hpp  model8.cpp  model8.hpp  model_type.hpp
rnnp/objective/: margin.hpp  margin_cross.hpp  margin_derivation.hpp  margin_early.hpp  margin_evalb.hpp  margin_late.hpp  margin_max.hpp  violation.hpp  violation_early.hpp  violation_late.hpp  violation_max.hpp
rnnp/optimize/: adadec.hpp  adadelta.hpp  adagrad.hpp  adagradrda.hpp  sgd.hpp
rnnp/parser/: model1.hpp  model2.hpp  model3.hpp  model4.hpp  model5.hpp  model6.hpp  model7.hpp  model8.hpp  parser.hpp
rnnp/semiring/: log.hpp  logprob.hpp  traits.hpp  tropical.hpp
rnnp/signature/: chinese.hpp  english.hpp  unicode.hpp
samples/: Makefile.am  ctb-files.py  files.py  split-pos.py  train-ctb.sh  train-wsj.sh
trance/: Makefile.am  allocator.hpp  binarize.hpp  binarize_left.hpp  binarize_main.cpp  binarize_right.hpp  debinarize.hpp  derivation.hpp  dot_product.hpp  evalb.cpp  evalb.hpp  evalb_main.cpp  feature.cpp  feature.hpp  feature_function.hpp  feature_set.cpp  feature_set.hpp  feature_state.hpp  feature_vector.hpp  feature_vector_codec.hpp  feature_vector_compact.hpp  feature_vector_linear.hpp  forest.cpp  forest.hpp  forest_main.cpp  gradient.cpp  gradient.hpp  grammar.cpp  grammar.hpp  grammar_main.cpp  graphviz.cpp  graphviz.hpp  learn_option.cpp  learn_option.hpp  loss.hpp  model.cpp  model.hpp  model_traits.hpp  objective.hpp  operation.cpp  (+27 more)
trance/feature/: grammar.hpp  penalty.hpp
trance/gradient/: model1.cpp  model1.hpp  model2.cpp  model2.hpp  model3.cpp  model3.hpp  model4.cpp  model4.hpp  model5.cpp  model5.hpp  model6.cpp  model6.hpp  model7.cpp  model7.hpp  model8.cpp  model8.hpp
trance/model/: model1.cpp  model1.hpp  model2.cpp  model2.hpp  model3.cpp  model3.hpp  model4.cpp  model4.hpp  model5.cpp  model5.hpp  model6.cpp  model6.hpp  model7.cpp  model7.hpp  model8.cpp  model8.hpp  model_type.hpp
trance/objective/: margin.hpp  margin_derivation.hpp  margin_early.hpp  margin_evalb.hpp  margin_late.hpp  margin_max.hpp  violation.hpp  violation_early.hpp  violation_late.hpp  violation_max.hpp
trance/optimize/: adadec.hpp  adadelta.hpp  adagrad.hpp  sgd.hpp
trance/parser/: model1.hpp  model2.hpp  model3.hpp  model4.hpp  model5.hpp  model6.hpp  model7.hpp  model8.hpp  parser.hpp
trance/semiring/: log.hpp  logprob.hpp  traits.hpp  tropical.hpp
trance/signature/: chinese.hpp  english.hpp  unicode.hpp
utils/: Makefile.am  atomicop.hpp  bit_vector.hpp  c_string_generator.hpp  c_string_parser.hpp  lexical_cast.hpp  mpi.hpp  resource.hpp  rwticket.hpp  trie_compact.hpp
